apps/base/servarr/radarr/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: pocket-id-auth-radarr
    namespace: apps
spec:
    plugin:
        oidc:
            issuer: https://auth.guibi.dev
            redirectUrl: /callback
            clientID: urn:k8s:secret:pocket-id-auth-radarr:clientID
            clientSecret: urn:k8s:secret:pocket-id-auth-radarr:clientSecret
            scopes:
                - openid
                - profile
                - email
