apps/base/servarr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: radarr
    namespace: servarr
spec:
    type: ClusterIP
    selector:
        app: radarr
    ports:
        - name: webui
          port: 7878
          protocol: TCP
