apps/base/servarr/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: radarr-ingress
    namespace: servarr
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`srv.guibi.dev`) && PathPrefix(`/radarr`)
          kind: Rule
          middlewares:
              - name: radarr-oidc-auth
                namespace: servarr
          services:
              - name: radarr
                namespace: servarr
                port: 7878
                scheme: http
    tls:
        secretName: tls-certificate

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: radarr-oidc-auth
    namespace: servarr
spec:
    plugin:
        traefikoidc:
            providerURL: https://auth.guibi.dev
            scopes: groups
            clientID: bf229943-0aa8-4a61-baa5-d229413c772d
            clientSecret: urn:k8s:secret:oidc-auth:CLIENT_SECRET
            sessionEncryptionKey: urn:k8s:secret:oidc-auth:SESSION_KEY
            callbackURL: /radarr/oauth/callback
            logoutURL: /radarr/oauth/logout
            postLogoutRedirectURI: /radarr
            allowedRolesAndGroups: [admin]
